# GennadyI2VModel

./: .gitignore  README.md  pyproject.toml
docs/: architecture_contract.md  body_ontology.md  dynamics_graph_delta_contract.md  memory_policy.md  planner_contract.md  reveal_occlusion_contract.md
examples/: dynamics_transitions.example.json  observed_pairs.example.json  temporal_sequences.example.json
scripts/: build_renderer_pairs_manifest_auto.py  build_supervised_renderer_manifest.py  build_video_transition_manifest.py  check_text_adapter.py  debug_canonical_scene_state.py  debug_dynamics.py  debug_i2v_generation.py  debug_memory_renderer.py  debug_real_perception_layers.py  debug_renderer.py  debug_text.py  demo_real_human_parsing_layers.py  demo_single_photo.py  demo_single_photo_seeded.py  parser_stack_smoke.py  parser_validation_run.py  perception_stack_smoke.py  run_renderer_training_pipeline.py
src/: utils_tensor.py
tests/: test_body_ontology_contract.py  test_canonical_human_scene_state.py  test_dynamics_factorized_family_architecture.py  test_dynamics_graph_delta_contract.py  test_dynamics_learned_primary_path.py  test_dynamics_manifest_dataset_pipeline.py  test_dynamics_observed_transitions_supervised_smoke.py  test_dynamics_structured_core.py  test_dynamics_transition_engine.py  test_graph_builder.py  test_human_state_transition_path.py  test_i2v_generation_loop_v1.py  test_input_layer_real_assets.py  test_integration_runtime_rendering.py  test_intent_parser.py  test_learned_quality_baseline.py  test_mask_geometry_and_backend_semantics.py  (+82 more)
(+134 files in other folders)
